module/postponed/type_constructor/tests/inc/pair/pair_without_args_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( pair Empty : <  > );
}
